# go-mlx

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  FINDINGS.md  README.md  TODO.md  adapter.go  adapter_test.go  api_common.go  api_common_test.go  api_darwin.go  api_shape_common.go  api_shape_test.go  api_stub.go  api_test.go  api_tokenizer_darwin.go  api_tokenizer_stub.go  api_tokenizer_stub_example_test.go  api_tokenizer_test.go  array.go  array_test.go  attention_snapshot_test.go  attention_test.go  ax7_generated_test.go  ax7_nil_regression_test.go  ax7_testmain_test.go  ax7_triplet_test.go  backend.go  backend_common.go  backend_common_test.go  compile.go  compute.go  compute_darwin.go  compute_darwin_example_test.go  compute_darwin_test.go  compute_stub.go  compute_stub_test.go  (+49 more)
.core/: build.yaml  release.yaml
cache/: cache.go  cache_test.go
cpp/: CLAUDE.md  CMakeLists.txt  FINDINGS.md  TODO.md
docs/: architecture.md  build.md  compute.md  development.md  history.md  index.md  models.md  training.md
go/: adapter.go  adapter_example_test.go  adapter_test.go  api_common.go  api_common_example_test.go  api_darwin_example_test.go  api_darwin_test.go  api_stub_example_test.go  api_stub_test.go  api_tokenizer_darwin_example_test.go  api_tokenizer_darwin_test.go  api_tokenizer_stub_test.go  api_tokenizer_test.go  attention_test.go  backend_common.go  compute_darwin_test.go  compute_example_test.go  compute_stub_example_test.go  compute_test.go  gguf_info.go  gguf_info_example_test.go  go.mod  go.sum  medium.go  mlx.go  mlx_test.go  (+9 more)
(+396 files in other folders)
